--- a/src/pages/Login/index.less
+++ b/src/pages/Login/index.less
@@ -1,9 +1,9 @@
-.main {
+.loginMain {
   width: 100%;
   height: 100%;
   font-family: 'Google Sans', 'Microsoft Yahei', 'WenQuanYi Micro Hei', 'sans-serif',
     'Helvetica Neue', 'Helvetica', 'Hiragino Sans GB';
-  background: url('http://192.168.1.1/luci-static/argon/background/water1.1.jpg') no-repeat;
+  background: url('../../../img/bg.png') no-repeat;
   background-size: cover;
 
   .login-container {
@@ -152,7 +152,7 @@
     transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   }
 
-  .login-container .login-form .form-login .input-group input:focus + .border {
+  .login-container .login-form .form-login .input-group input:focus+.border {
     transform: scaleX(1);
   }
 
