--- a/src/pages/components/Maincontent.less
+++ b/src/pages/components/Maincontent.less
@@ -14,18 +14,18 @@
   line-height: 1.5;
 }
 
-.cbi-map-descr + fieldset {
+.cbi-map-descr+fieldset {
   margin-top: 1rem;
 }
 
-.cbi-map-descr > abbr {
+.cbi-map-descr>abbr {
   text-decoration: underline;
   cursor: help;
 }
 
 .refresh {
   position: absolute;
-  top: 16px;
+  top: 33px;
   right: 40px;
 
   .ant-btn-primary {
@@ -36,5 +36,27 @@
 
   .ant-btn-loading {
     background-color: #5e72e4;
+  }
+}
+
+.cpuAndMem {
+  width: 100%;
+  height: 220px;
+  // background-color: #5e72e4;
+  border-radius: 3px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  .cpu {
+    width: 49.5%;
+    height: 300px;
+    border-radius: 3px;
+  }
+
+  .mem {
+    width: 49.5%;
+    height: 100%;
+    border-radius: 3px;
   }
 }
